--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -6,3 +6,7 @@ authors: [Astro_angelfish]
 description: A simple custom item creator
 libraries:
   - org.apache.commons:commons-lang3:3.12.0
+  - com.zaxxer:HikariCP:5.0.1
+  - com.mysql:mysql-connector-j:jar:8.0.32
+  - org.postgresql:postgresql:jar:42.6.0
+  - commons-io:commons-io:jar:2.11.0
